# Skill-Demand-Predictor-Two

./: .gitignore  README.md  README_GUIA_RAPIDA.md  docs.md  main.py  pyproject.toml
application/ports/: input_ports.py  output_ports.py
application/use_cases/: analyze_trends.py  detect_emerging_skills.py  extract_skills.py  predict_demand.py
config/: settings.py
data/raw/: job_offers_sample.csv
docs/: ml_pipeline.md  technical_design.md
domain/entities/: academic_plan.py  curriculum.py  industry.py  job_offer.py  skill.py  trend.py
domain/services/: academic_planner.py  gap_analyzer.py  report_service.py  skill_classifier.py  trend_analyzer.py
domain/value_objects/: skill_category.py  time_period.py
frontend/: streamlit_app.py
frontend/react-dashboard/: README.md
infrastructure/database/: models.py
infrastructure/etl/: pipeline.py
infrastructure/ml/: evaluation.py  models.py  visualization.py
infrastructure/nlp/: skill_extractor.py
infrastructure/repositories/: job_data_repository.py  skill_repository.py  sql_program_repository.py  sql_skill_repository.py
interfaces/api/: main.py
interfaces/controllers/: prediction_controller.py
interfaces/dtos/: requests.py
tests/: test_services.py
